best-practices/restrict_image_registries/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: k8s-nginx
    image: k8s.gcr.io/nginx:1.7.9
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: k8s-nginx
    image: k8s.gcr.io/nginx:1.7.9
  - name: busybox
    image: bar.io/busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: k8s-nginx
    image: k8s.gcr.io/nginx:1.7.9
  - name: busybox
    image: eu.foo.io/busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: k8s-nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: k8s-nginx
    image: eu.foo.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: k8s-nginx
    image: bar.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: k8s-nginx
    image: bar.io/nginx
  - name: busybox
    image: eu.foo.io/busybox
